# vectorDB_from_scratch

./: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/api/: deps.py  dto.py
app/api/routes/: chunks.py  documents.py  embed.py  libraries.py  operations.py  search.py
app/core/: indexing.py  models.py  mongo_storage.py  similarity_metrics.py  storage.py  vector_db.py
app/core/indexes/: flat.py  ivf.py  lsh_simhash.py
postman/: VectorDB_Postman_Collection.json
tests-mongo/: conftest.py  data_generator.py  requirements.txt  run_tests.py  run_tests_with_api.py  test_data.json  test_e2e_mongo.py  test_ivf_e2e.py  test_lsh_simhash_e2e.py  test_persistence.py
